# turingarena

./: .cproject  .dockerignore  .gitignore  .mailmap  .project  .pydevproject  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.base  Makefile  Pipfile  README.asc  README.md  aliases.js  arena.cpp  build.rs  cli.sh  config.tmux  db-test-populate.sql  db-turingarena.sql  docker-compose.yaml  generate-dockerignore.sh  install.sh  install_tests.sh  launchall.sh  logo.tex  mkdocs.yml  model.cpp  model.h  package-lock.json  package.json  parser.py  parser.y  prepare.sh  prettier.config.js  scanner.h  scanner.l  search-index.js  serverless.yml  (+12 more)
cli/: .gitignore  .mailmap  common.py  setup.cfg  setup.py  turingarena_cli.py  turingarena_cli_new.py  turingarena_daemon.py
cli/turingarena_cli/: base.py  cli.py  cloud.py  command.py  common.py  daemon.py  daemonctl.py  evaluate.py  files.py  get.py  info.py  legacy.py  legacy_cli.py  login.py  make.py  new.py  pack.py  remote.py  search.py  ssh.py  submit.py  test.py
cli/turingarena_cloud_cli/: cli.py  cloud.py  evaluation_events.py  get.py  problem.py  search.py  submit.py  version.py
cli/turingarena_common/: commands.py  evaluation_events.py  git_common.py
legacy/rust-server/: .env  .graphqlconfig  Cargo.toml  cli.sh
legacy/rust-server/legacy-turingarena-contest-cli/: README.md
legacy/rust-server/python-turingarena-cli/: setup.py
legacy/rust-server/src/: main.rs
legacy/rust-server/turingarena-cli-client/: build.rs
legacy/rust-server/turingarena-core/: build.rs
legacy/rust-server/turingarena-proc-macro/: Cargo.toml
legacy/rust-server/turingarena-web-client/: Cargo.toml  build.rs
legacy/rust-server/turingarena-web-server/: Cargo.toml
rust/turingarena/: .graphqlconfig  Cargo.toml  build.rs  main.rs
rust/turingarena-contest/: Cargo.toml  build.rs
rust/turingarena-contest-cli/: Cargo.toml  apollo.config.js  package.json
rust/turingarena-contest-cli/graphql/: auth.graphql  events.graphql  schema.json  submit.graphql  user.graphql
rust/turingarena-contest-cli/src/: admin.graphql  auth.rs  client.rs  events.rs  main.rs  submit.rs  token.rs  user.rs  view-contest.graphql
rust/turingarena-contest-server/: Cargo.toml
rust/turingarena-contest-server/src/: main.rs
rust/turingarena-contest-webcontent/: Cargo.toml  build.rs
rust/turingarena-contest-webcontent/src/: lib.rs
rust/turingarena-contest/src/: announcements.rs  api.rs  args.rs  auth.rs  config.rs  contest.rs  context.rs  evaluation.rs  graphql_schema.rs  lib.rs  main.rs  problem.rs  questions.rs  schema.rs  server.rs  submission.rs  user.rs
rust/turingarena-ppf/: Cargo.toml
rust/turingarena-ppf/src/: lib.rs
rust/turingarena-task-maker/: Cargo.toml
rust/turingarena-task-maker/examples/: get-problem-metadata.rs  runner.rs
rust/turingarena-task-maker/src/: driver.rs  evaluate.rs  lib.rs  material.rs  problem.rs
rust/turingarena/examples/: gen-material.rs  runner.rs
rust/turingarena/src/: autoio.rs  award.rs  batch.rs  bios.rs  content.rs  evaluation.rs  feedback.rs  file.rs  juniper_ext.rs  lib.rs  main.rs  make.rs  problem.rs  submission.rs
src/: archive.rs  autoio.rs  award.rs  diff.rs  evaluation.rs  feedback.rs  file.rs  juniper_ext.rs  lib.rs  main.rs  problem.rs  requirements.txt  setup.cfg  setup.py  submission.rs
src/contest/: announcements.rs  api.rs  auth.rs  award.rs  cli_admin.rs  contest.rs  contest_evaluation.rs  contest_problem.rs  contest_submission.rs  graphql_schema.rs  mod.rs  operations.graphql  questions.rs  schema.rs  server.rs  user.rs  web_client.rs
src/contest/formats/: italy_yaml.rs  mod.rs
src/evallib/: bios.rs  dce.rs  diff.rs  mod.rs
src/task_maker/: driver.rs  evaluate.rs  material.rs  mod.rs
src/turingarena/: __init__.py  algorithm.py  goals.py  logging.py  logging_helper.py  main.rs.html  metadata.py  version.py
src/turingarena/api/: aws_backend.py  dummy_impl.py  evaluate.py  git_manager.py  hypersh_api.py  hypersh_evaluate.py  hypersh_files.py  lambda_proxy.py  make_hypersh_files_request.py  make_hypersh_request.py  s3_files.py  serve.py  wsgi_proxy.py
src/turingarena/cli/: base.py  cli.py  cloud.py  command.py  evaluate.py  file.py  files.py  new.py  search.py
src/turingarena/driver/: client.py  connection.py  description.py  engine.py  exceptions.py  expressions.py  generator.py  language.py  process.py  program.py  server.py  visitors.py
src/turingarena/evallib/: algorithm.py  evaluation.py  goals.py  metadata.py  parameters.py  tempdir.py
src/turingarena/evaluation/: evaluator.py  events.py  runner.py  runners.py  segi.py  submission.py  util.py
src/turingarena/file/: generated.py
src/turingarena/text/: parser.py  textgen.py  visitor.py
src/turingarena/util/: visitor.py
src/turingarena_cli/: base.py  cli.py  cloud.py  common.py  evaluate.py  files.py  info.py  new.py  pack.py  search.py
src/turingarena_common/: commands.py  submission.py
src/turingarena_impl/api/: aws_backend.py  evaluate.py  git_manager.py  hypersh_evaluate.py  lambda_proxy.py  s3_files.py  serve.py  wsgi_proxy.py
src/turingarena_impl/cli_server/: evaluate.py  pack.py  runner.py  test.py
src/turingarena_impl/driver/: language.py  server.py  source.py
src/turingarena_impl/evaluation/: evaluate.py  evaluator.py  segi.py  util.py
src/turingarena_impl/file/: generated.py
src/turingarena_impl/tests/: pytestplugin.py
src/turingarena_impl/text/: parser.py
taserver/: MANIFEST.in  README.md  db-test-populate.sql  setup.cfg  version.txt
taserver/SQL/: create-db.sql  init.sql
taserver/etc/: turingarena.conf
taserver/turingarena_web/: __init__.py  init_logger.py  wsgi.py
taserver/turingarena_web/cli/: base.py  cli.py  command.py  contest.py  init.py  problem.py  server.py  user.py
taserver/turingarena_web/controller/: api.py  (+7 more)
turingarena-cli-client/: Cargo.toml  build.rs
turingarena-cli-client/src/: import.rs  lib.rs  operations.graphql
turingarena-core/: Cargo.toml  build.rs  diesel.toml
turingarena-core/src/: archive.rs  award.rs  evaluation.rs  file.rs  lib.rs  problem.rs  rusage.rs
(+2532 files in other folders)
