[workspace]
members = ["turingarena-*"]

[package]
name = "turingarena"
version = "0.1.0"
authors = [
    "Alessandro Righi <alerighi4@gmail.com>",
    "Massimo Cairo <cairomassimo@gmail.com>",
]
edition = "2018"
default-run = "turingarena"

[[bin]]
name = "turingarena"
required-features = ["contest"]

[[bin]]
name = "turingarena-graphql-schema"
required-features = ["contest"]

[features]
server = ["juniper_rocket", "rocket", "contest"]
graphql-schema = []
cli-admin = [
    "graphql-schema",
    "graphql_client",
    "rpassword",
    "contest",
    "archive",
]
cli-admin-remote = ["reqwest", "cli-admin"]
archive = [
    "rand",
    "ssri",
    "tar",
    "xz2",
]
contest = [
    "archive",
    "chrono",
    "structopt",
    "jsonwebtoken",
    "dirs",
    "uuid",
    "diesel",
    "diesel_migrations",
    "rand",
]
web = [
    "graphql-schema",
    "rust-embed",
]
task-maker = [
    "glob",
    "mime_guess",
    "task-maker-format",
    "tempdir",
    "num_cpus",
]

[dependencies]

serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
serde_yaml = "0.8.11"

base64 = "0.10.1"

turingarena-proc-macro = { version = "0.1.0", path = "turingarena-proc-macro/" }

log = "0.4.8"
failure = "0.1.5"

juniper = "0.14.0"
juniper_rocket = { version = "0.5.0", optional = true }

rocket = { version = "0.4.2", optional = true }
diesel = { version = "1.4.2", features = ["sqlite"], optional = true }
diesel_migrations = { version = "1.4.0", optional = true}

rand = { version = "0.7.2", optional = true }
chrono = { version = "0.4.9", optional = true }
structopt = { version = "0.3.3", optional = true }
jsonwebtoken = { version = "5.0.1", optional = true }
dirs = { version = "2.0.2", optional = true }

uuid = { version = "0.8", features = ["v4"], optional = true }

graphql_client = { version = "0.8.0", optional = true }
reqwest = { version = "0.9.22", optional = true }
rpassword = { version = "4.0", optional = true }

tempdir = { version = "0.3.7", optional = true }
num_cpus = { version = "1.10.1", optional = true }

glob = { version = "0.2", optional = true }
mime_guess = { version = "2.0.1", optional = true }

rust-embed = { version = "5.1.0", optional = true, features = ["interpolate-folder-path"] }

task-maker-format = { git = "https://github.com/edomora97/task-maker-rust.git", optional = true }

ssri = { version = "5.0.0", optional = true }
tar = { version = "0.4.26", optional = true }
xz2 = { version = "0.1.6", optional = true }

[build-dependencies]

graphql_client_cli = "0.8.0"
fs_extra = "1.1.0"
ssri = "5.0.0"
tar = "0.4.26"
xz2 = "0.1.6"

[patch.crates-io]
# fix for https://github.com/graphql-rust/juniper/issues/455
juniper = { git = "http://github.com/cairomassimo/juniper.git", branch = "fix-multiop-validation" }
