[metadata]
name = turingarena-cli
author = TuringArena Group
author-email = contact@turingarena.org
summary = Command Line Interface for TuringArena
description-file = ../README.md
description-content-type = text/x-markdown; charset=UTF-8
home-page = http://www.turingarena.org/
project-urls =
    Source Code = https://github.com/turingarena/turingarena
    Documentation = https://turingarena.readthedocs.io/
    Bug Tracker = https://github.com/turingarena/turingarena/issues
license = MPL 2.0

[files]
packages =
    turingarena_cli
    turingarena_common

[entry_points]
console_scripts =
    turingarena = turingarena_cli.cli:main
    turingarenad = turingarena_cli.daemon:main
