[metadata]
name = turingarena-dev
version = attr: turingarena_common.version.VERSION
author = TuringArena Group
author_email = contact@turingarena.org
summary = Command Line Interface for TuringArena
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = http://www.turingarena.org/
project_urls =
    Source Code = https://github.com/turingarena/turingarena
    Documentation = https://turingarena.readthedocs.io/
    Bug Tracker = https://github.com/turingarena/turingarena/issues
license = MPL 2.0

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    turingarena = turingarena_cli.cli:main
