[metadata]
name = turingarena-web
# version = file: version.txt
author = TuringArena Group
author_email = contact@turingarena.org
summary = Command Line Interface for TuringArena
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = http://www.turingarena.org/
# project_urls =
#    Source Code = https://github.com/turingarena/turingarena-web
#    Documentation = https://turingarena.readthedocs.io/
#    Bug Tracker = https://github.com/turingarena/turingarena/issues
license = MPL 2.0

[options]
zip_safe = false
include_package_data = true
packages = find:

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    tactl = turingarena_web.cli.cli:main
