[metadata]
name = turingarena-web
version = file: version.txt
author = TuringArena Group
author_email = contact@turingarena.org
summary = Web interface for TuringArena
url = http://www.turingarena.org/
project_urls =
    Source Code = https://github.com/turingarena/turingarena
    Documentation = https://turingarena.readthedocs.io/
    Bug Tracker = https://github.com/turingarena/turingarena/issues
license = MPL 2.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires=
    flask
    psycopg2-binary
    bcrypt
    turingarena-dev
    commonmark
    tabulate
    toml
    coloredlogs

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    tactl = turingarena_web.cli.cli:main
