[package]
name = "turingarena-cli-client"
version = "0.1.0"
edition = "2018"

[dependencies]
turingarena-core = { path = "../turingarena-core" }

juniper = "0.14.1"
serde = "1.0.103"
serde_json = "1.0.44"
structopt = "0.3.5"
graphql_client = "0.8.0"
base64 = "0.11.0"

[build-dependencies]
turingarena-core = { path = "../turingarena-core" }
graphql_client_codegen = "0.8.0"
