[package]
name = "turingarena-cli-client"
description = "cli interface for turingarena"
version = "0.1.0"
license = "MPL-2.0"
authors = [
    "Alessandro Righi <alerighi4@gmail.com>",
    "Massimo Cairo <cairomassimo@gmail.com>",
]
documentation = "https://turingarena.github.io/turingarena/turingarena/"
repository = "https://github.com/turingarena/turingarena"
edition = "2018"

[dependencies]
turingarena-core = { path = "../turingarena-core" }

juniper = "0.14"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
graphql_client = "0.8"
base64 = "0.11"
failure = "0.1"
tar = "0.4"

[build-dependencies]
turingarena-core = { path = "../turingarena-core" }
graphql_client_codegen = "0.8"
