[package]
name = "turingarena-core"
description = "core for turingarena"
version = "0.1.0"
license = "MPL-2.0"
authors = [
    "Alessandro Righi <alerighi4@gmail.com>",
    "Massimo Cairo <cairomassimo@gmail.com>",
]
documentation = "https://turingarena.github.io/turingarena/turingarena/"
repository = "https://github.com/turingarena/turingarena"
edition = "2018"

[dependencies]
turingarena-proc-macro = { version = "0.1.0", path = "../turingarena-proc-macro/" }
task-maker-format = { git = "https://github.com/edomora97/task-maker-rust.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
base64 = "0.10"
ssri = "5.0"
tar = "0.4"
log = "0.4"
failure = "0.1"
juniper = "0.14"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"
rand = "0.7"
chrono = "0.4"
structopt = "0.3"
jsonwebtoken = "5.0"
dirs = "2.0"
uuid = { version = "0.8", features = ["v4"] }
graphql_client = "0.8"
reqwest = "0.9"
rpassword = "4.0"
tempdir = "0.3"
num_cpus = "1.10"
glob = "0.2"
mime_guess = "2.0"

[build-dependencies]
ssri = "5.0"
tar = "0.4"
