[workspace]
members = ["turingarena-*"]

[package]
name = "turingarena"
description = "a collection of libraries and tools to create programming challenges and competitions"
version = "0.1.0"
authors = [
    "Alessandro Righi <alerighi4@gmail.com>",
    "Massimo Cairo <cairomassimo@gmail.com>",
]
license = "MPL-2.0"
documentation = "https://turingarena.github.io/turingarena/turingarena/"
repository = "https://github.com/turingarena/turingarena"
edition = "2018"
default-run = "turingarena"

[features]
default = ["embed"]
embed = ["turingarena-web-server/embed"]

[dependencies]
turingarena-core = { path = "turingarena-core/" }
turingarena-cli-client = { path = "turingarena-cli-client/" }
turingarena-web-server = { path = "turingarena-web-server/", default-features = false }

structopt = "0.3"
