[package]
name = "turingarena-contest-cli"
version = "0.1.0"
authors = ["Alessandro Righi <alerighi4@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.3"
rpassword = "4.0"
dirs = "2.0.2"
graphql_client = "0.8.0"
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10.1"
