[package]
name = "turingarena-contest-server"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.0"
juniper_rocket = "0.5.0"
rocket = "0.4.2"
diesel = { version = "1.4.2", features=["sqlite"] }
rand = "0.7.2"
