[package]
name = "turingarena-contest-webcontent"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"

# TODO: does including a parent directory actually work?
include = ["../web/dist/turingarena-contest/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = { version = "5.1.0", features = ["interpolate-folder-path"] }
