[package]
name = "turingarena-contest"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"

[dependencies]
juniper = "0.14.0"
juniper_rocket = "0.5.0"
rocket = "0.4.2"
diesel = { version = "1.4.2", features = ["sqlite"] }
diesel_migrations = "1.4.0"
rand = "0.7.2"
chrono = "0.4.9"
bcrypt = "0.6"
turingarena-contest-webcontent = { path = "../turingarena-contest-webcontent/" }
turingarena = { path = "../turingarena/" }
structopt = "~0.3.3"
jsonwebtoken = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
base64 = "0.10.1"

[dev-dependencies]
tempdir = "0.3"