[package]
name = "turingarena-contest"
version = "0.1.0"
authors = [
    "Alessandro Righi <alerighi4@gmail.com>",
    "Massimo Cairo <cairomassimo@gmail.com>",
]
edition = "2018"
default-run = "turingarena-contest"

[features]
server = ["juniper_rocket", "rocket"]
cli-admin = ["graphql_client", "rpassword"]
cli-admin-remote = ["reqwest"]
web-content = ["turingarena-contest-web-content"]

[dependencies]
juniper = "0.14.0"
juniper_rocket = { version = "0.5.0", optional = true }
rocket = { version = "0.4.2", optional = true }
diesel = { version = "1.4.2", features = ["sqlite"] }
diesel_migrations = "1.4.0"
rand = "0.7.2"
chrono = "0.4.9"
turingarena-contest-web-content = { path = "../turingarena-contest-web-content/", optional = true }
turingarena-task-maker = { path = "../turingarena-task-maker/", optional = true }
turingarena = { path = "../turingarena/" }
structopt = "0.3.3"
jsonwebtoken = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.11"
uuid = { version = "0.8", features = ["v4"] }
base64 = "0.10.1"
dirs = "2.0.2"
graphql_client = { version = "0.8.0", optional = true }
reqwest = { version = "0.9.22", optional = true }
rpassword = { version = "4.0", optional = true }

[dev-dependencies]
tempdir = "0.3"
