[package]
name = "turingarena-ppf"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"] }
base64 = "0.10.1"
base64-serde = "0.3.2"
turingarena-content = { path = "../turingarena-content" }
derive_builder = "0.7.2"
