[package]
name = "turingarena"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"] }
base64 = "0.10.1"
juniper = "0.14.0"
