[package]
name = "turingarena"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
task-maker = [
    "glob",
    "mime_guess",
    "task-maker-cache",
    "task-maker-dag",
    "task-maker-exec",
    "task-maker-format",
    "task-maker-store",
    "tempdir",
    "num_cpus",
]

[dependencies]

serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"] }
base64 = "0.10.1"
juniper = "0.14.0"
turingarena-proc-macro = { path = "../turingarena-proc-macro/" }

log = "0.4.8"
failure = "0.1.5"

tempdir = { version = "0.3.7", optional = true }
num_cpus = { version = "1.10.1", optional = true }

glob = { version = "0.2", optional = true }
mime_guess = { version = "2.0.1", optional = true }

task-maker-cache = { git = "https://github.com/edomora97/task-maker-rust.git", optional = true }
task-maker-dag = { git = "https://github.com/edomora97/task-maker-rust.git", optional = true }
task-maker-exec = { git = "https://github.com/edomora97/task-maker-rust.git", optional = true }
task-maker-format = { git = "https://github.com/edomora97/task-maker-rust.git", optional = true }
task-maker-store = { git = "https://github.com/edomora97/task-maker-rust.git", optional = true }
