[package]
name = "turingarena-proc-macro"
description = "procedural macros for turingarena"
version = "0.1.0"
license = "MPL-2.0"
authors = [
    "Massimo Cairo <cairomassimo@gmail.com>",
]
documentation = "https://turingarena.github.io/turingarena/turingarena/"
repository = "https://github.com/turingarena/turingarena"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"
