[package]
name = "turingarena-web-client"
description = "web client for turingarena"
version = "0.1.0"
license = "MPL-2.0"
authors = [
    "Alessandro Righi <alerighi4@gmail.com>",
    "Massimo Cairo <cairomassimo@gmail.com>",
]
documentation = "https://turingarena.github.io/turingarena/turingarena/"
repository = "https://github.com/turingarena/turingarena"
edition = "2018"

[dependencies]
rust-embed = { version = "5.1.0", features = ["interpolate-folder-path"] }

[build-dependencies]
turingarena-core = { path = "../turingarena-core" }
fs_extra = "1.1.0"
