[package]
name = "turingarena-web-server"
version = "0.1.0"
edition = "2018"

[features]
default = ["embed"]
embed = ["turingarena-web-client"]

[dependencies]
turingarena-core = { path = "../turingarena-core/" }
turingarena-web-client = { path = "../turingarena-web-client/", optional = true }

rocket = "0.4"
juniper_rocket = "0.5"
structopt = "0.3"
